# master

./: .env.template  .gitattributes  .gitignore  .gitmodules  .jshintrc  bower.json  composer.json  current.sh  env.js  index.html  install.sh  log.txt  log.val  main.js  monitor.sh  notes.txt  package-lock.json  package.json  readme.md  start.cmd  start.sh  terminal.bat  terminal.cmd  touchpad.sh  virtualhost.conf
18-09-2014/: binding.gyp  hello.cc  start.sh
2017-07-18/: settings.js
2017-07-21-app/: globals.js  start.sh  watch.js
cm/: env.js  (+4 more)
game/: .gitignore  .jshintrc  2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game  makefile  start.sh  webpack.config.js
game/client/: app.config.js  app.js  app.run.js  index.js  style.scss
game/client/auth/: auth.service.js  index.js  login.directive.js  login.template.html  register.directive.js
game/client/source/: index.js
game/client/tutorial/: index.js  tutorial.html
game/client/tutorial/tutorial01/: controller.js  view.html
game/client/tutorial/tutorial01/app/: app  main.cc  makefile
game/client/tutorial/tutorial02/: controller.js  view.html
game/client/tutorial/tutorial02/app/: app  default.vs  main.cc  makefile
game/client/tutorial/tutorial02/app/glad/include/glad/: glad.h
game/client/tutorial/tutorial02/app/glad/src/: glad.cc
game/data/: default.fs  default.vs  settings.json  text.fs  text.txt  vertices.data
game/data/shaders/: button.fs  button.vs  codemath.fs  codemath.vs  default.fs  default.vs  example.fs  example.vs  menu.fs  menu.vs  simple.fs  simple.vs  text.fs  text.vs
game/data/shaders/2.0/: default.fs  default.vs  text.fs  text.vs
game/dev/: index.js
game/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
game/glad/include/glad/: glad.h
game/glad/src/: glad.cpp
game/globals/App/: index.js
game/include/: codemath.h  xlib.h
game/include/app/: CG.h  WAY.h  c_tut.h  camera.h  debug.h  default.h  example.h  main.h  menu.h  mesh.h  new.h  red.h  shader.h  share.h  text.h  texture.h  transform.h  ven.h  window.h
game/include/app/ABGR/: ABGR.h
game/include/app/glut/: glut.h
game/include/app/mysql/: mysql.h
game/include/app/simple/: main.h  shader.h  simple.h  swindow.h
game/include/glad/: glad.h
game/public/: app.js  index.html  style.css
game/public/inc/: Rect.js
game/server/: app.js  index.js
game/src/: 01_create_a_window.c  01_create_a_window.cpp  02_hello_triangle.cpp  03_element_buffer.cpp  04_shaders.cpp  05_transformations.cpp  CG.cpp  default_main.cpp  glad.c  main.c  main.cpp  menu.cpp  mesh.cpp  shader.c  shader.cpp  share.c  text.cpp  texture.c  transform.cpp  window.cpp
game/src/ABGR/: ABGR.cpp
game/src/GLUT/: bitmap.c
game/src/c_tut/: c_tut.cpp  c_tut_01.cpp  c_tut_02.cpp  c_tut_03.cpp
game/src/codemath/: button.cpp  codemath_main.cpp
game/src/example/: example.cpp  example01.cpp
game/src/mysql/: mysql.cpp
game/src/new/: new.cpp  new_01.cpp  new_02.cpp  new_03.cpp  new_04.cpp  new_05.cpp  new_06.cpp  new_07.cpp  new_08.cpp
game/src/new/misc/: example01.cpp  example02.cpp  example03.cpp  example04.cpp  misc.cpp  misc_center_dot.cpp  monster.cpp
game/src/red/: chapter.cpp  red.cpp
game/src/red/chapters/: chapter_01.cpp  chapter_02.cpp  chapter_03.cpp  chapter_04.cpp  chapter_05.cpp  chapter_06.cpp  chapter_07.cpp  chapter_08.cpp  chapter_09.cpp
game/src/simple/: main.cpp  shader.cpp  simple.c  swindow.cpp
game/src/ven/: ven_main.cpp  ven_text.cpp
game/src/ven/chapters/: chapter_01.cpp  chapter_02.cpp  chapter_03.cpp  chapter_04.cpp
game/src/xlib/: button.cpp  xlib_main.cpp
game/sub/circle/: CMakeLists.txt  start.cmd
game/sub/circle/src/: main.cc
game/tmp/: example.c  sample.val  test.c
game/util/browser-sync/: index.js
gtk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  start.sh
gtk/src/: main.cpp
(+3387 files in other folders)
